--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,13 +10,11 @@ services:
     environment:
       - RELAY_SERVER_PORT=8081
       - RELAY_SERVER_HOST=0.0.0.0
-      - RELAY_STAG_URL=http://stag:8080
+      - RELAY_STAG_URL=http://host.docker.internal:8080
       - RELAY_WEBSOCKET_BUFFER_SIZE=1024
       - RELAY_WEBSOCKET_HEARTBEAT_INTERVAL=30s
       - RELAY_BATCH_MAX_SIZE=5
       - RELAY_BATCH_TIMEOUT=100ms
-    depends_on:
-      - stag
     networks:
       - tabular
     restart: unless-stopped
@@ -26,17 +24,6 @@ services:
       timeout: 3s
       retries: 3
       start_period: 10s
-
-  # Mock STAG service for development
-  stag:
-    image: nginx:alpine
-    ports:
-      - "8080:80"
-    volumes:
-      - ./mock-stag.conf:/etc/nginx/conf.d/default.conf
-    networks:
-      - tabular
-    restart: unless-stopped
 
   # Prometheus for metrics
   prometheus:
